--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="Liste">
         <ul>
             <li><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></li>
+            <li><a href="table.html">Klikk her for å komme til Ukeplanen min</a></li>
             <li><button onclick="window.location.href='http://ikkepedia.org/wiki/Bolle'"> Trykk her for å lese om
                     boller. OBS: IKKEPEDIA</button></li>
         </ul>
