--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></li>
             <li><a href="table.html">Klikk her for å komme til Ukeplanen min</a></li>
+            <li><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></li>
             <li><button onclick="window.location.href='http://ikkepedia.org/wiki/Bolle'"> Trykk her for å lese om
                     boller. OBS: IKKEPEDIA</button></li>
         </ul>
