--- a/index.html
+++ b/index.html
@@ -5,19 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elias sin Hovednettside</title>
+    <style>
+        h1{
+            text-align: center;
+        }
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            background-color: #e7e7e7;
+            justify-content: center;
+        }
+        .flex-container > div{
+            background-color: #ffffff00;
+            width: 100px;
+            height: 75px;
+            margin: 10px;
+            text-align: center;
+        }
+        button{
+            width: 100px;
+            height: 75px;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-image: url("shocked-black-guy.gif");
+            background-size: cover;
+            background-position: 70%;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 style="color:#f36aff">Velkommen til Elias sin Hovednettside</h1>
-    <div id="Liste">
-        <ul>
-            <li><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></li>
-            <li><a href="table.html">Klikk her for å komme til Ukeplanen min</a></li>
-            <li><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></li>
-            <li><button onclick="window.location.href='http://ikkepedia.org/wiki/Bolle'"> Trykk her for å lese om
-                    boller. OBS: IKKEPEDIA</button></li>
-        </ul>
-
+    <h1 style="color:#003369">Velkommen til Elias sin Hovednettside</h1>
+    <div class="flex-container">
+            <div><button type="button" class="btn"><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></button></div>
+            <div><button type="button" class="btn"><a href="table.html">Klikk her for å komme til Ukeplanen min</a></button></div>
+            <div><button type="button" class="btn"><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></button></div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her for å lese om boller. OBS: IKKEPEDIA</div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
     </div>
 </body>
 
