--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
-            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="Perioder.html"> Periodesystemet</button></div>
             <div><button type="button" class="btn"><a href="bymedhus.html"> Innleveringsoppgave 1</button></div>
     </div>
 </body>
