--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <div><button type="button" class="btn"><a href="table.html">Klikk her for å komme til Ukeplanen min</a></button></div>
             <div><button type="button" class="btn"><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></button></div>
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her for å lese om boller. OBS: IKKEPEDIA</div>
-            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
+            <div><button type="button" class="btn"><a href="hemmeligpassord.html"> Hemmelig Passord </button></div>
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
             <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
             <div><button type="button" class="btn"><a href="Perioder.html"> Periodesystemet</button></div>
-            <div><button type="button" class="btn"><a href="bymedhus.html"> Innleveringsoppgave 1</button></div>
+            <div><button type="button" class="btn"><a href="Nettside1.html"> Innleveringsoppgave 1</button></div>
     </div>
 </body>
 
