--- a/index.html
+++ b/index.html
@@ -1,54 +1,30 @@
 <!DOCTYPE html>
 <html lang="no">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elias sin Hovednettside</title>
-    <style>
-        h1{
-            text-align: center;
-        }
-        .flex-container {
-            display: flex;
-            flex-wrap: wrap;
-            background-color: #e7e7e7;
-            justify-content: center;
-        }
-        .flex-container > div{
-            background-color: #ffffff00;
-            width: 100px;
-            height: 75px;
-            margin: 10px;
-            text-align: center;
-        }
-        button{
-            width: 100px;
-            height: 75px;
-            cursor: pointer;
-        }
-        .btn:hover {
-            background-image: url("shocked-black-guy.gif");
-            background-size: cover;
-            background-position: 70%;
-            border-radius: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="indeks1.css">
+    <title>Index1</title>
 </head>
-
 <body>
-    <h1 style="color:#003369">Velkommen til Elias sin Hovednettside</h1>
-    <div class="flex-container">
-            <div><button type="button" class="btn"><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></button></div>
-            <div><button type="button" class="btn"><a href="table.html">Klikk her for å komme til Ukeplanen min</a></button></div>
-            <div><button type="button" class="btn"><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></button></div>
-            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her for å lese om boller. OBS: IKKEPEDIA</div>
-            <div><button type="button" class="btn"><a href="hemmeligpassord.html"> Hemmelig Passord </button></div>
-            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
-            <div><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle"> Trykk her</button></div>
-            <div><button type="button" class="btn"><a href="Perioder.html"> Periodesystemet</button></div>
-            <div><button type="button" class="btn"><a href="Nettside1.html"> Innleveringsoppgave 1</button></div>
+<div id="hoved">
+    <div class="a1"> <span>Elias sin hovednettside</span></div>
+    <div class="a2"> </div>
+    <div class="a3"> 
+        <div class="liste">
+            <div class="boks"><button type="button" class="btn"><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="table.html">Klikk her for å komme til Ukeplanen min</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="CSS_lekeplass.html">Klikk her for å se lekeplass</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="http://ikkepedia.org/wiki/Bolle">Trykk her for å lese om boller. OBS: IKKEPEDIA</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="hemmeligpassord.html">Hemmelig Passord</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="Perioder.html">Periodesystemet</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="Nettside1.html">Innleveringsoppgave 1</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="OlympiskRinger.html">Olympiske ringer</a></button></div>
+        </div>
+        
     </div>
+    <div class="a4"> </div>
+    <div class="a5"> </div>
+</div>
 </body>
-
 </html>
