--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="hoved">
     <div class="a1"> <span>Elias sin hovednettside</span></div>
     <div class="a2"> </div>
-    <div class="a3"> 
+    <div class="a3">
         <div class="liste">
             <div class="boks"><button type="button" class="btn"><a href="førsteNettside.html">Klikk her for å komme til Bollesiden</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="table.html">Klikk her for å komme til Ukeplanen min</a></button></div>
@@ -20,6 +20,8 @@
             <div class="boks"><button type="button" class="btn"><a href="Perioder.html">Periodesystemet</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="Nettside1.html">Innleveringsoppgave 1</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="OlympiskRinger.html">Olympiske ringer</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="OlympiskRinger.html">Denne plassen er ledig</a></button></div>
+            <div class="langboks"><button type="button" class="btn"><a href="JavaIndeks.html">Klikk her for å se alle mine JavaScript programmer!</a></button></div>
         </div>
         
     </div>
