--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="boks"><button type="button" class="btn"><a href="Perioder.html">Periodesystemet</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="Nettside1.html">Innleveringsoppgave 1</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="OlympiskRinger.html">Olympiske ringer</a></button></div>
-            <div class="boks"><button type="button" class="btn"><a href="OlympiskRinger.html">Denne plassen er ledig</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="yatzy.html">YATZY!</a></button></div>
             <div class="langboks"><button type="button" class="btn"><a href="JavaIndeks.html">Klikk her for å se alle mine JavaScript programmer!</a></button></div>
         </div>
         
