--- a/JavaIndeks.html
+++ b/JavaIndeks.html
@@ -121,6 +121,8 @@ button {
             <div class="boks"><button type="button" class="btn"><a href="20terning.html">Prøv ut 20-terningen</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="hemmeligpassord.html">Hemmelig Passord</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="variabler.html">Første JS program</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="yatzy.html">YATZY!</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="visittkort.html">Elias sin fantastiske visittkortmaskin!</a></button></div>
         </div>
     </div>
     <div class="a4"> </div>
