--- a/JavaIndeks.html
+++ b/JavaIndeks.html
@@ -123,6 +123,7 @@ button {
             <div class="boks"><button type="button" class="btn"><a href="variabler.html">Første JS program</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="yatzy.html">YATZY!</a></button></div>
             <div class="boks"><button type="button" class="btn"><a href="visittkort.html">Elias sin fantastiske visittkortmaskin!</a></button></div>
+            <div class="boks"><button type="button" class="btn"><a href="chat.html">Den sykeste chattetjenesten!</a></button></div>
         </div>
     </div>
     <div class="a4"> </div>
