--- a/chat.html
+++ b/chat.html
@@ -3,33 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chat</title>
+    <title>Elias sin fantastiske chattetjeneste!</title>
+    <link rel="stylesheet" href="chat.css">
 </head>
 <body>
-    <h1>Simple Chat</h1>
+    <img src="https://ih1.redbubble.net/image.5311819382.1650/fposter,small,wall_texture,product,750x1000.u2.jpg" id="bilde">
+    <h1>Elias sin fantastiske chattetjeneste!</h1>
+    <button id="clearChatKnapp">Slett tidligere meldinger</button>
     <div id="auth">
-        <h2>Choose a Username</h2>
-        <input type="text" id="username" placeholder="Username">
-        <button onclick="login()">Log In</button>
+        <h2>Velg et brukernavn</h2>
+        <input type="text" id="username" placeholder="Brukernavn">
+        <button onclick="login()">Logg inn</button>
     </div>
 
     <div id="chat" style="display: none;">
         <h2 id="welcomeMessage"></h2>
         <div id="messages"></div>
-        <input type="text" id="messageInput" placeholder="Type your message...">
+        <input type="text" id="messageInput" placeholder="Skriv din melding...">
         <button onclick="sendMessage()">Send</button>
     </div>
-
-    <!-- Firebase App (the core Firebase SDK) -->
+    <!-- Obligatoriske linker -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-
-    <!-- Firebase Firestore -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-
-    <!-- Your Firebase configuration -->
     <script src="firebase-config.js"></script>
-
-    <!-- Chat script -->
     <script src="chat.js"></script>
 </body>
 </html>
